force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <description>Stores information to animal&apos;s appointments</description>
    <label>Booking</label>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>