force-app/main/default/objects/Booking__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Animal the booking is for</description>
    <inlineHelpText>Please select the animal for whom this booking is for</inlineHelpText>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>