force-app/main/default/objects/Booking__c/fields/AnimalOwner__c.field-meta.xml
<CustomField>
    <fullName>AnimalOwner__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Animal__r.Owner__r.Id , Animal__r.Owner__r.FirstName &amp; &quot; &quot; &amp; Animal__r.Owner__r.LastName, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Owner</label>
    <type>Text</type>
</CustomField>