force-app/main/default/objects/Booking__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>End time of the appointment</description>
    <inlineHelpText>Please enter the appointment end date</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>