force-app/main/default/objects/Booking__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of appointment</description>
    <inlineHelpText>Please select the type of appointment.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vet</fullName>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>