force-app/main/default/objects/Booking__c/listViews/AllBookings.listView-meta.xml
<ListView>
    <fullName>AllBookings</fullName>
    <columns>NAME</columns>
    <columns>Animal__c</columns>
    <columns>Date__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>AnimalOwner__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>